# I.BA_MLOPS_MM.PROJECT

./: .gitignore  README.md  pyproject.toml
src/ingestion/: backfill.py  coingecko_client.py  sync_hourly.py
src/transforms/: build_staging_table.py  calculate_features.py  feature_builder.py
src/utils/: extract_supported_coins.py
